--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "abdulmajeed-jamaan/filament-translatable-tabs": "^4.0",
         "bezhansalleh/filament-language-switch": "^4.0",
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
