adding filament panel

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "abdulmajeed-jamaan/filament-translatable-tabs": "^4.0",
         "bezhansalleh/filament-language-switch": "^4.0",
         "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
